--- a/src/main/resources/static/assets/style.css
+++ b/src/main/resources/static/assets/style.css
@@ -23,11 +23,12 @@ body {
 }
 
 .chat-thread {
-  margin: 24px auto 0 auto;
-  padding: 0 20px 0 0;
+  margin: 0 0 0 0;
+  padding: 20px 20px 20px 20px;
   list-style: none;
   overflow-y: scroll;
   overflow-x: hidden;
+  width: 100% !important;
 }
 
 .chat-thread li {
@@ -118,7 +119,7 @@ body {
 /* Small screens */
 @media all and (max-width: 767px) {
   .chat-thread {
-    width: 90%;
+    width: 100%;
     height: 260px;
   }
 
@@ -130,7 +131,7 @@ body {
 /* Medium and large screens */
 @media all and (min-width: 768px) {
   .chat-thread {
-    width: 50%;
+    width: 100%;
     height: 480px;
   }
 
